--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 25
@@ -24,11 +26,22 @@ android {
     }
 }
 
+def appcompat_version = "25.3.1"
+def butterknife_version = "8.4.0"
+def timber_version = "4.1.1"
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
     compile project(':core')
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "com.android.support:appcompat-v7:$appcompat_version"
+
+    compile "com.jakewharton.timber:timber:$timber_version"
+    compile "com.jakewharton:butterknife:$butterknife_version"
+    kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
+
+    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
 }
