--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,14 +27,16 @@ android {
 }
 
 def appcompat_version = "25.3.1"
-def butterknife_version = "8.4.0"
-def timber_version = "4.1.1"
+def butterknife_version = "8.5.1"
+def timber_version = "4.5.1"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
+
     compile project(':core')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "com.android.support:appcompat-v7:$appcompat_version"
@@ -43,5 +45,5 @@ dependencies {
     compile "com.jakewharton:butterknife:$butterknife_version"
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
 
-    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.4'
 }
