--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion Integer.parseInt(ANDROID_BUILD_SDK_VERSION)
+    buildToolsVersion ANDROID_BUILD_TOOLS_VERSION
     defaultConfig {
         applicationId "com.github.stephenvinouze.kinapp"
-        minSdkVersion 13
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion Integer.parseInt(ANDROID_BUILD_SDK_VERSION)
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -30,12 +30,9 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
-
 }
 
-def appcompat_version = "25.3.1"
-def butterknife_version = "8.5.1"
-def timber_version = "4.5.1"
+def appcompat_version = "26.0.2"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -47,10 +44,11 @@ dependencies {
     compile project(':core')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "com.android.support:appcompat-v7:$appcompat_version"
+    compile "com.android.support:recyclerview-v7:$appcompat_version"
 
-    compile "com.jakewharton.timber:timber:$timber_version"
-    compile "com.jakewharton:butterknife:$butterknife_version"
-    kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
-
-    compile 'com.afollestad.material-dialogs:core:0.9.4.4'
+    compile ('com.afollestad.material-dialogs:core:0.9.4.7', {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.android.support', module: 'support-v13'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    })
 }
