--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -46,3 +46,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     })
 }
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
