--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,25 +1,20 @@
 apply from: '../library.gradle'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-
-def parcel_version = "1.1.6"
+apply plugin: 'kotlin-android-extensions'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0-eap13"
-
-    compile "org.parceler:parceler-api:$parcel_version"
-    kapt "org.parceler:parceler:$parcel_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 }
 
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
+androidExtensions {
+    experimental = true
 }
