--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,29 +26,26 @@ android {
     }
 }
 
-def appcompat_version = "26.0.2"
+def appcompat_version = "28.0.0"
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
-    compile project(':core')
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "com.android.support:appcompat-v7:$appcompat_version"
-    compile "com.android.support:recyclerview-v7:$appcompat_version"
+    implementation project(':core')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$appcompat_version"
+    implementation "com.android.support:recyclerview-v7:$appcompat_version"
 
-    compile ('com.afollestad.material-dialogs:core:0.9.4.7', {
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+
+    implementation ('com.afollestad.material-dialogs:core:0.9.4.7', {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'support-v13'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     })
-}
-
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
 }
